--- a/website/public/app/views/home.html
+++ b/website/public/app/views/home.html
@@ -1,17 +1,52 @@
 <div>
-    <h1 class="title-sec">Clientes</h1>
-    <table class="table table-striped table-bordered table-select" style="width:100%">
-        <thead><tr>
-            <th>Name</th>
-            <th>Rating</th>
-        </tr></thead>
-        <tbody>
-            <tr ng-repeat="rowCliente in clientes">
-                <td>{{rowGames.name}}</td>
-                <td>{{rowGames.rating}}</td>
-                <td><button class="btn btn-default" style="border-radius:50%;" ng-click="excluirGame(rowGames.$id)">X</button></td></tr>
-            </tr>
-        <tbody>
-    <table>
-    <a href="#/cadastrarGame" class="btn btn-default fab" style="border-radius:50%;">+</a>
+    <h1 class="title-sec">Game List</h1>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <h3>Wanting to play</h3>
+            <table class="table table-striped table-bordered table-select" style="width:100%">
+                <thead><tr>
+                    <th>Name</th>
+                    <th>Rating</th>
+                </tr></thead>
+                <tbody>
+                    <tr ng-repeat="rowCliente in clientes">
+                        <td>{{rowGames.name}}</td>
+                        <td>{{rowGames.rating}}</td>
+                    </tr>
+                <tbody>
+            <table>
+          </div>
+          <div class="col-sm">
+            <h3>Playing</h3>
+            <table class="table table-striped table-bordered table-select" style="width:100%">
+                <thead><tr>
+                    <th>Name</th>
+                    <th>Rating</th>
+                </tr></thead>
+                <tbody>
+                    <tr ng-repeat="rowCliente in clientes">
+                        <td>{{rowGames.name}}</td>
+                        <td>{{rowGames.rating}}</td>
+                    </tr>
+                <tbody>
+            <table>
+          </div>
+          <div class="col-sm">
+            <h3>Played</h3>
+            <table class="table table-striped table-bordered table-select" style="width:100%">
+                <thead><tr>
+                    <th>Name</th>
+                    <th>Rating</th>
+                </tr></thead>
+                <tbody>
+                    <tr ng-repeat="rowCliente in clientes">
+                        <td>{{rowGames.name}}</td>
+                        <td>{{rowGames.rating}}</td>
+                    </tr>
+                <tbody>
+            <table>
+          </div>
+        </div>
+      </div>
 </div>
